# mip-network-design

./: .clang-format  .gitignore  CMakeLists.txt  README.md  model.lp
cmake/: FindGUROBI.cmake  FindLEMON.cmake
include/: network_design.hpp
include/mylib/: mygraphlib.h  myutils.h
include/network_design/: config.hpp.in  defs.hpp  heuristics.hpp  mip.hpp  utils.hpp
include/network_design/mip/: base.hpp  branch_and_cut.hpp  polynomial.hpp
instances/: g_100_3000_.3_1.cflp  g_100_300_.3_1.cflp  g_100_400_.3_1.cflp  g_100_500_.3_1.cflp  g_200_400_.3_1.cflp  mc859-strip-packing_1  mc859-strip-packing_1~  mo420_network_design_1_100_1000_100_800_10  mo420_network_design_1_100_20_80_2  mo420_network_design_1_10_100_20_80_1  mo420_network_design_1_20_100_20_80_2  mo420_network_design_1_50_100_20_80_5  mo420_network_design_2_100_1000_100_800_10  mo420_network_design_2_10_100_20_80_1  mo420_network_design_2_20_100_20_80_2  mo420_network_design_2_50_100_20_80_5  mo420_network_design_3_100_1000_100_800_10  mo420_network_design_3_10_100_20_80_1  mo420_network_design_3_20_100_20_80_2  mo420_network_design_3_50_100_20_80_5  mo420_network_design_4_100_1000_100_800_10  mo420_network_design_4_10_100_20_80_1  mo420_network_design_4_20_100_20_80_2  mo420_network_design_4_50_100_20_80_5  mo420_network_design_5_100_1000_100_800_10  mo420_network_design_5_10_100_20_80_1  mo420_network_design_5_20_100_20_80_2  mo420_network_design_5_50_100_20_80_5
report/branch-and-cut/: main.tex
report/polynomial/: main.tex  refs.bib
scripts/: run_branch_and_cut.sh  run_polynomial.sh
src/: mo420-network-design-1.cpp  mo420-network-design-2.cpp  p1.cpp
src/examples/: ex_cflp_aula.cpp  ex_fractional_tsp.cpp  ex_shortestpath.cpp  ex_steiner_directed_aula.cpp  ex_steiner_undirected.cpp  ex_tsp_aula.cpp  mc859-strip-packing-gera-entrada.cpp  mc859-strip-packing.cpp
src/mylib/: mygraphlib.cpp
src/network_design/: defs.cpp  heuristics.cpp  utils.cpp
src/network_design/mip/: base.cpp  branch_and_cut.cpp  polynomial.cpp
